# chatcube

./: .gitignore  LICENSE  README.md
riscos/: AppEventHandlers.cpp  AppEventHandlers.h  CMakeLists.txt  global.h  main.cpp  updater.cpp  utils.cpp  utils.h
riscos/libs/cJSON/: cJSON.c  cJSON.h
riscos/libs/cloverleaf/cloverleaf/: BaseViews.h  CLClipboard.cpp  CLClipboard.h  CLException.cpp  CLException.h  CLGraphics.cpp  CLGraphics.h  CLImage.cpp  CLImage.h  CLImageCache.cpp  CLImageCache.h  CLImageJPGLoader.cpp  CLImageJPGLoader.h  CLImageLoader.cpp  CLImageLoader.h  CLImagePNGLoader.cpp  CLImagePNGLoader.h  CLRadioButton.h  CLSound.cpp  CLSound.h  CLUtf8.cpp  CLUtf8.h  IdleTask.cpp  IdleTask.h  Logger.cpp  Logger.h  rosprite.cpp  rosprite.h  utf8.h
riscos/libs/eventbus/: CMakeLists.txt
riscos/libs/inipp/inipp/: inipp.h
riscos/libs/librufl/: Makefile
riscos/libs/librufl/include/: rufl.h
riscos/libs/librufl/src/: CMakeLists.txt  Glyphs
riscos/libs/librufl/tools/: rufl_glyph_map.c
riscos/libs/tbx/: .cproject  .gitignore  .project  ANNOUNCE  Makefile  README.md  install-cross  patches.diff  tbx.doxyfile  tbx.htm  unix-zip
riscos/libs/tbx/docsrc/: copyright.h  doc.h  events.h  examples.h  ext.h  history.h  res.h  source.h  tbx.h  toolbox.h  using.h  view.h
riscos/libs/tbx/examples/: !!ReadMe  CleanAll,feb  MakeAll,feb
riscos/libs/tbx/examples/!Graphics/: !Boot,feb  !Help  !Run,feb  !Sprites,ff9  Drawing,aff  Messages  Res,fae  Sprites,ff9  bluebells,c85
riscos/libs/tbx/examples/!IconView/: !Boot,feb  !Help  !Run,feb  !Sprites,ff9  Messages  Res,fae
riscos/libs/tbx/examples/!Reverse/: !Boot,feb  !Help  !Run,feb  !Sprites,ff9  Messages  res,fae
riscos/libs/tbx/examples/!StopWatch/: !Boot,feb  !Help  !Run,feb  !Sprites,ff9  Messages  Res,fae
riscos/libs/tbx/examples/!TbxDocEx/: !Boot,feb  !Help  !Run,feb  !Sprites,ff9  Messages  Res,fae
riscos/libs/tbx/examples/!TbxMin/: !Help  !Run,feb  !Sprites,ff9  Messages  Res,fae
riscos/libs/tbx/examples/RiscPkg/: Control  Copyright  Rules  TBX-Examples.inc
riscos/libs/tbx/tbx/: CMakeLists.txt  abouttobeshownlistener.cc  abouttobeshownlistener.h  actionbutton.cc  actionbutton.h  adjuster.cc  adjuster.h  application.cc  application.h  autocreate.h  autocreatelistener.h  bbox.h  button.cc  button.h  buttonselectedlistener.h  caret.cc  caret.h  caretlistener.h  clipboard.cc  clipboard.h  closewindowlistener.h  colour.h  colourdbox.cc  colourdbox.h  colourmenu.cc  colourmenu.h  command.h  commandrouter.cc  commandrouter.h  component.cc  component.h  dcs.cc  dcs.h  deferdelete.h  deleteonhidden.h  displayfield.cc  displayfield.h  draggable.cc  draggable.h  draghandler.h  (+170 more)
riscos/libs/tbx/tbx/doc/: docfileinfo.cc  docfileinfo.h  dociconbar.cc  dociconbar.h  docmanager.cc  docmanager.h  docpositionwindow.cc  docpositionwindow.h  docsaveas.cc  docsaveas.h  document.cc  document.h  docwindow.cc  docwindow.h
riscos/libs/tbx/tbx/ext/: oleclient.cc  oleclient.h  stronghelp.cc  stronghelp.h  tabs.cc  tabs.h  tabsselectionlistener.h  treeview.cc  treeview.h  treeviewlisteners.h
riscos/libs/tbx/tbx/res/: resactionbutton.h  resadjuster.h  resbase.cc  resbase.h  resbutton.h  rescolourdbox.h  rescolourmenu.h  resdcs.h  resdisplayfield.h  resdraggable.h  reseditor.cc  reseditor.h  resexcept.h  resfile.cc  resfile.h  resfileinfo.h  resfontdbox.h  resfontmenu.h  resgadget.h  resiconbar.h  resiteratorbase.h  resjustification.h  reslabel.h  reslabelledbox.h  resmenu.cc  resmenu.h  resnumberrange.h  resobject.cc  resobject.h  resoptionbutton.h  respopup.h  resprintdbox.h  resproginfo.h  resquit.h  resradiobutton.h  ressaveas.h  resscale.h  resscrolllist.h  resshortcut.h  resslider.h  (+7 more)
riscos/libs/tbx/tbx/view/: fontitemrenderer.cc  fontitemrenderer.h  gadgetlistview.cc  gadgetlistview.h  iconitemrenderer.cc  iconitemrenderer.h  itemrenderer.cc  itemrenderer.h  itemview.cc  itemview.h  listview.cc  listview.h  reportview.cc  reportview.h  selectcommands.h  selection.cc  selection.h  stringviewvalue.h  textview.cc  textview.h  tileview.cc  tileview.h  viewitems.h  viewvalue.h
riscos/libs/tbx/userguide/: ReadMe  docapp.xml  events.xml  generate.sh  gettingstarted.xml  graphics.xml  intro.xml  minapp.xml  objects.xml  res.xml  simpleapp.xml  tbx.xml  utils.xml  views.xml
riscos/libs/tbx/userguide/html/: ch01.html  ch01s02.html  ch02.html  ch02s02.html  ch03.html  ch03s02.html  ch03s03.html  ch03s04.html  ch04.html  ch04s02.html  ch04s03.html  ch04s04.html  ch05.html  ch05s02.html  ch05s03.html  ch05s04.html  ch05s05.html  ch05s06.html  ch06.html  ch07.html  (+14 more)
riscos/model/: AppDataModel.cpp  AppDataModel.h  AppDataModelAuth.cpp  AppDataModelLoads.cpp  AppDataModelTelegram.cpp  AppDataModelTypes.h  AppDataModelUpdates.cpp  AppEvents.cpp  AppEvents.h  AvatarData.cpp  AvatarData.h  ChatData.cpp  ChatData.h  ChatMemberData.cpp  ChatMemberData.h  ChoicesModel.cpp  ChoicesModel.h  FileCacheDownloader.cpp  FileCacheDownloader.h  JsonData.cpp  JsonData.h  MemberData.cpp  MemberData.h  MessageData.cpp  MessageData.h  NetworkRequests.cpp  NetworkRequests.h  StickerData.cpp  StickerData.h  TelegramData.cpp  TelegramData.h
riscos/res/: res-feedback,fae  res-multiline,fae  res-single-line,fae  res.txt
riscos/service/: CLHTTPService_v2.cpp  CLHTTPService_v2.h  IKConfig.cpp  IKConfig.h
riscos/ui/: AddMembersInChatDialog.cpp  AddMembersInChatDialog.h  AppColours.cpp  AppColours.h  AppIconbar.cpp  AppIconbar.h  AppMenu.cpp  AppMenu.h  AvatarChanger.cpp  AvatarChanger.h  CallbackListeners.h  ChatListView.cpp  ChatListView.h  ChatMainUI.cpp  ChatMainUI.h  ChatMembersList.cpp  ChatMembersList.h  CreateChatDialog.cpp  CreateChatDialog.h  DeleteAccountDialog.cpp  DeleteAccountDialog.h  EditProfileSettings.cpp  EditProfileSettings.h  FeedbackDialog.cpp  FeedbackDialog.h  FontStyles.cpp  FontStyles.h  ForwardMessageDialog.cpp  ForwardMessageDialog.h  LoginDialog.cpp  LoginDialog.h  LogoutDialog.cpp  LogoutDialog.h  ManageGroupDialog.cpp  ManageGroupDialog.h  MessagesListView.cpp  MessagesListView.h  ProgressBarUI.cpp  ProgressBarUI.h  RecipinetList.cpp  (+23 more)
(+226 files in other folders)
